<resources>
    <string name="app_name">Alpha订餐</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="about_call_us">联系开发者</string>
    <string name="about_mail">yanyunlong2010@163.com</string>
    <string name="about_version">应用版本</string>
    <string name="about_us">About us</string>

    <string name="menu_about">关于应用</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="login_regist">注册</string>
    <string name="login_login">登录</string>
    <string name="menu_my">个人信息</string>
    <string name="menu_order">订单管理</string>
    <string name="total_price">总价:</string>
    <string name="my_logout">注销</string>
    <string name="my_change_password">修改密码</string>
    <string name="change_password_confirm">确认修改</string>
    <string name="prompt_confirm">确认密码</string>
    <string name="prompt_input_password">输入密码</string>
    <string name="order_detail">订单详情</string>
</resources>
