<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/change_password_psd"
            android:layout_width="@dimen/edittext_bg_horizontal"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:hint="@string/prompt_input_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/text_size"/>

        <EditText
            android:id="@+id/change_password_confirm"
            android:layout_width="@dimen/edittext_bg_horizontal"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_password_psd"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_edittext"
            android:drawableLeft="@drawable/ic_confirm_password"
            android:drawablePadding="10dp"
            android:hint="@string/prompt_confirm"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/text_size"/>

        <Button
            android:id="@+id/change_password_update"
            android:layout_width="260dp"
            android:layout_height="38dp"
            android:layout_below="@id/change_password_confirm"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_login"
            android:text="@string/change_password_confirm"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small"/>
    </RelativeLayout>
</LinearLayout>